core/tests/ui/sensitive/unsupported_secure_type.stderr
error: #[secure] supports String, appdb::SensitiveValueOf<T>, and recursive Child / Option<Child> / Vec<Child> shapes where Child implements appdb::Sensitive
 --> tests/ui/sensitive/unsupported_secure_type.rs:7:18
  |
7 |     pub counter: std::collections::HashMap<String, String>,
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
